# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  diff.py  entry.py  main.py  utils.py  views.py
gendiff/scripts/: gendiff.py
gendiff/views/: __init__.py  json.py  plain.py  stylish.py
tests/: test_diff.py  test_utils.py
tests/fixtures/nested/: result_json.txt
tests/fixtures/simple/: result_json.txt
